feat: add categories module and update posts api
