# model/category_model.go
@@ -2,7 +2,7 @@ package model
 
 import "time"
 
-type MCtegory struct {
+type MCategory struct {
 	ID        int64     `json:"id"`
 	Name      string    `json:"name"`
 	CreatedAt time.Time `json:"created_at"`
